2005-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenutoolbutton.c (menu_position_func): Take widget
	y offset into account when positioning the popup.  (#314470,
	Christian Persch)

2005-08-25  Owen Taylor  <otaylor@redhat.com>
 
	* gdk/gdkscreen.c (gdk_screen_get_type): Use gdk_screen_init
	as instance_init, not base_init! (#314452, Fix from Frederic
	Crozat,	reported by Joe Marcus Clarke). Trivial cleanup: use -1.
	rather than 1 for a negative flag value.

2005-08-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.8.2 ===

	* gtk/gtkclipboard.c (request_image_received_func): Use the correct
	callback for image/gif, and also try image/bmp.  (#314086,  Mark 
	Wielaard)

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_volume_render_icon): 
	Use gnome-dev-harddisk for volumes, not gnome-fs-blockdev.  (#314382,
	Sebastien Bacher)
	
	* NEWS: Updates

	* gtk/gtksettings.c (gtk_settings_get_for_screen): Make sure font
	and cursor settings get propagated down to the screen initially.
	Pointed out by Frederic Crozat.

	* gtk/gtkicontheme.c (ensure_valid_themes): Don't try to send a client
	message if the screen is NULL. Noticed by Kjartan Maraas.

2005-08-24  Matthias Clasen  <mclasen@redhat.com>

	* Bump version

	* === Released 2.8.1 ===

	* NEWS: Updates
	
2005-08-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_visible): Protect
	against lazy filterers which return values other than TRUE or
	FALSE from their visible func.  (#314335)

2005-08-23  Owen Taylor  <otaylor@redhat.com>

	Fix for #314004, reported by Michael Reinsch:

	* gdk/gdk.symbols:
	* gdk/gdkscreen.[ch]: Add gdk_screen_get/set_font_options_libgtk_only()
	Add gdk_screen_get/set_resolution_libgtk_only()

	* gdk/gdkpango.c (gdk_pango_context_get_for_screen): Set
	the options for the screen on the newly created context.

	* gtk/gtksettings.c (settings_update_font_options/dpi) gtkwidget.c: 